<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:text="@string/user_email"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:text="@string/user_pwd"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_login"
        style="@style/global_btn_green"
        android:layout_marginTop="15dp"
        android:text="@string/hint_login" />

</LinearLayout>